// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericRangeFilter Combination of min and max number filters 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "range": Object {
            "imdbRating": Object {
              "gte": 5,
              "lte": 10,
            },
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`NumericRangeFilter Combination of min and max number filters 2`] = `
Object {
  "facets": Array [],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [
      Object {
        "display": "RangeFilter",
        "id": "imdbRating_5_10",
        "identifier": "imdbRating",
        "label": "IMDB Rating",
        "max": 10,
        "min": 5,
        "type": "NumericRangeSelectedFilter",
      },
    ],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;

exports[`NumericRangeFilter Combination of min and max number filters 4`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "range": Object {
            "imdbRating": Object {
              "gte": 5,
            },
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`NumericRangeFilter Combination of min and max number filters 6`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {},
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "range": Object {
            "imdbRating": Object {
              "lte": 5,
            },
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;
